[metadata]
name = monasca-thresh
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = Computes thresholds on metrics and publishes alarms to Kafka when exceeded. The current state is also saved in the MySQL database.
classifier=
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: Apache Software License
  Topic :: System :: Monitoring
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

keywords = openstack monitoring threshold
description-file = README.rst
home-page = https://github.com/openstack/monasca-thresh
license = Apache

[entry_points]
console_scripts =
    monasca-thresh = monasca_thresh.thresh:main

oslo.config.opts =
    monasca_thresh = monasca_thresh.conf:list_opts

[files]
packages =
    monasca_thresh
data_files =
    /etc/monasca =
        etc/monasca/thresh-logging.conf

[wheel]
universal = 1
